--- a/SpringBootFirst/pom.xml
+++ b/SpringBootFirst/pom.xml
@@ -79,6 +79,13 @@
             <version>1.2.3</version>
         </dependency>
 
+
+		<dependency>
+			<groupId>com.alibaba.rocketmq</groupId>
+			<artifactId>rocketmq-client</artifactId>
+			<version>3.2.6</version>
+		</dependency>
+
 	</dependencies>
 
 
